nginx configuration for Drupal

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -1,7 +1,12 @@
+location = /favicon.ico {
+    log_not_found off;
+    access_log off;
+}
+
 location = /robots.txt {
-        allow all;
-        log_not_found off;
-        access_log off;
+    allow all;
+    log_not_found off;
+    access_log off;
 }
 
 # Very rarely should these ever be accessed outside of your lan
