--- a/nginx-http.conf
+++ b/nginx-http.conf
@@ -1,3 +1,4 @@
+# Drupal specific nginx configuration
 server {
 
     set_by_lua $docroot 'return os.getenv("DOCUMENT_ROOT")';
@@ -21,7 +22,6 @@ server {
 
     # Very rarely should these ever be accessed outside of your lan
     location ~* \.(txt|log)$ {
-        allow 192.168.0.0/16;
         deny all;
     }
 
